fix: fixed link to styles file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>CV Angelina Goltseva</title>
-    <link rel="stylesheet" href="CV.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="CV/font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/c4c33ec66f.js" crossorigin="anonymous"></script>
 </head>
