--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="eng"></html>
-<head>
+<html>
+    <head>
     <meta charset="utf-8">
     <title>CV Angelina Goltseva</title>
     <link rel="stylesheet" href="style.css">
@@ -274,3 +274,5 @@
         </div>
     </footer>
 </body>
+</html>
+
