--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
     <meta charset="utf-8">
     <title>CV Angelina Goltseva</title>
@@ -14,7 +14,7 @@
         <div class="resume">
             <div class="left">
                 <div class="img_box">
-                    <img src="./images/cv photo.jpg" alt="CV Photo">
+                    <img src="./images/cv_photo.jpg" alt="CV Photo">
                 </div>
                 <div class="contact_box">
                     <div class="title">
@@ -262,7 +262,7 @@
     </div>
     <footer class="footer_box">
         <div class="course_link">
-            <a href="https://rs.school/js/"><img src="./images/rs_school_js.svg" width="100px" height= 75px" alt="RS School logo"></a>
+            <a href="https://rs.school/js/"><img src="./images/rs_school_js.svg" width="100px" height="75px" alt="RS School logo"></a>
         </div>
         <div class="copyright">
             <p>Angelina Goltseva, 2022</p>
