--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </div>
     <footer class="footer_box">
         <div class="course_link">
-            <a href="https://rs.school/js/"><img src="./images/rs_school_js.svg" alt="RS School logo" class="rs_school_logo"></a>
+            <a class="rs_school_logo" href="https://rs.school/js/"><img src="./images/rs_school_js.svg" alt="RS School logo" class="rs_school_logo"></a>
         </div>
         <div class="copyright">
             <p>Angelina Goltseva, 2022</p>
